--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
     </section>
   </div>
 <!-- Firebase App SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
 
 <!-- Firebase Firestore SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore.js"></script>
 
 <!-- Firebase Authentication SDK -->
-<script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
-  <script src="script.js"></script>
-  <script src="participants.js"></script>
+<script type="module" src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js"></script>
+  <script type="module" src="script.js"></script>
+  <script type="module" src="participants.js"></script>
 </body>
 </html>
