自動輸入名字

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- 報到模塊 -->
   <section id="checkInSection">
     <h2>報到處</h2>
-    <input type="text" id="name" placeholder="請輸入姓名">
+    <input type="text" id="name" name="name" autocomplete="name" placeholder="請輸入姓名">
     <button onclick="checkIn()">報到</button>
     <p id="checkInMessage"></p>
   </section>
