--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <section id="checkInSection">
     <h2>報到處</h2>
     <input type="text" id="name" name="name" autocomplete="name" placeholder="請輸入姓名">
-    <button onclick="checkIn()">報到</button>
+    <button id="checkInButton">報到</button>
     <p id="checkInMessage"></p>
   </section>
 
