新增留言區

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
         <p id="groupMemberList">組員：未分配</p>
       </div>
     </header>
-
+    
+  <!-- 新增留言顯示區 -->
+  <div id="messageDisplay" class="message-display">
+    <!-- 留言會顯示在這裡，從左到右滾動 -->
+  </div>
+    
     <!-- 活動行程與注意事項 -->
     <section id="scheduleAndNotice" class="two-column">
       <div class="column">
