更新留言區

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <section id="messageBoard">
       <h2>留言板</h2>
       <textarea id="messageInput" placeholder="在此輸入留言..."></textarea>
-      <button onclick="submitMessage()">提交留言</button>
-      <div id="messages"></div>
+      <button id="submitMessageButton">提交留言</button>
+      <div id="messageDisplay"></div>
     </section>
 
     <!-- 報到狀態 -->
