--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     </header>
     
   <!-- 新增留言顯示區 -->
-  <div id="messageDisplay" class="message-display">
-    <!-- 留言會顯示在這裡，從左到右滾動 -->
-  </div>
+<div id="messageDisplay" class="message-display">
+  <div id="messageContainer" class="message-container"></div>
+</div>
     
     <!-- 活動行程與注意事項 -->
     <section id="scheduleAndNotice" class="two-column">
